--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;800;900&family=Saira:wght@500;600;700&display=swap');
 
 * {
     padding: 0;
@@ -15,21 +15,12 @@ html {
 
 body {
   background-color: #efeded;
-  min-height: 100vh;
-  max-width: 70rem;
+  min-height: 95vh;
+  min-width: 50vh;
+  max-width: max-content;
   margin: 1rem auto;
   box-shadow: 0px 0px 25px rgba(0,0,0,0.5);
   border-radius: 0.5em;
-}
-
-header2 {
-  display: grid;
-  grid-template-rows: 1;
-  background-color: rgba(28,66,115,1);
-  color: #fff;
-  padding: 1rem 1.5rem;
-  border-top-right-radius: 0.5em;
-  border-top-left-radius: 0.5em;
 }
 
 header {
@@ -38,15 +29,17 @@ header {
   justify-content: center;
   background-color: rgba(28,66,115,1);
   color: #fff;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.3rem;
   border-top-right-radius: 0.5em;
   border-top-left-radius: 0.5em;
 }
 
 header h1{
-  font-size: 2.5rem;
+  font-family: 'Saira', sans-serif;
+  font-weight: 700;
+  font-size: 2.8rem;
   font-weight: normal;
-  margin: 0.5rem 0rem 0.5rem 12.5rem;
+  margin: 0.2rem 0rem 0.2rem 12.5rem;
 }
 
 header a {
@@ -63,9 +56,15 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 1.5rem;
-  margin-bottom: 1.2rem;
+  margin-top: 1.8rem;
+  margin-bottom: 1rem;
+  margin-right: 0.2rem;
   font-size: 1.2em;
+}
+
+.kirjaudu {
+  margin-top: 1rem;
+  margin-left: 2.4rem;
 }
 
 nav {
@@ -96,11 +95,41 @@ section {
   flex-direction: row;
   justify-content: center;
   font-size: 1.3rem;
+  padding-left: 0.5em;
 }
 
 .otsikko_ja_teksti {
-  margin: 0.5em 15em;
+  margin: 0.7em 0em 0em 0.5em;
+  font-size: 1.2rem;
 }
+
+.otsikko_ja_teksti p{
+  margin-left: 0rem;
+  margin-right: 0rem;
+}
+
+.esittely_teksti p{
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.2rem;
+  margin-top: 0.5em;
+  margin-left: 11.5em;
+  margin-right: 10em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.yhteys_teksti p{
+  font-family: 'Nunito', sans-serif;
+  font-size: 0.9rem;
+  margin-top: 0.5em;
+  margin-left: 20em;
+  margin-right: 20em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 
 form > div{
   display: flex;
@@ -131,8 +160,9 @@ input[type=submit]{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 5.5rem;
-  
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+  margin-left: 5.8rem; 
 }
 
 input[type=submit]:hover {
@@ -143,11 +173,14 @@ input[type=submit]:hover {
 table {
   border: 1px solid black;
   background-color: #d2d2d2;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 69rem;
   margin: 2rem;
   margin-top: 0rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.4rem;
+  margin-right: 0.9rem;
 }
 
 th {
@@ -166,12 +199,12 @@ td {
 
 tr:nth-child(even) {background-color: #f2f2f2;}
 
-hr {
+hr4 {
   border: none;
   margin-top: 1rem;
 }
 
-footer {
+footer4 {
   font-size: 0.8rem;
   width: 100%;
   height: 40px;
@@ -181,7 +214,7 @@ footer {
   left: 0;
   text-align: center;
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.6rem;
 }
 
 hr2 {
@@ -196,13 +229,13 @@ footer2 {
   color: #1B1B3A;
 }
 
-hr3 {
+hr {
   border: none;
-  border-top: dotted #1B1B3A 1px;
+  /*border-top: dotted #1B1B3A 1px;*/
   margin: 0.5rem;
 }
 
-footer3 {
+footer {
   font-size: 0.8rem;
   text-align: center;
   color: #1B1B3A;
@@ -215,11 +248,19 @@ footer3 {
   background-color: #e5e5e5;
   border: 1px solid #999;
   border-radius: 0.5rem;
-  padding: 1rem;
+  padding: 0.7rem 1rem 0rem 1rem;
   margin: 1rem;
   text-align: center;
 }
 
 .info a {
   color: #f26d48;
+}
+
+.error {
+  color:#f26d48;
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
