--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -99,13 +99,12 @@ section {
 }
 
 .otsikko_ja_teksti {
-  margin: 0.7em 0em 0em 0em;
   font-size: 1.2rem;
   margin: 0.5em;
 }
 
 .otsikko_ja_teksti p{
-  margin-left: 1rem;
+  margin-left: 1.5rem;
   margin-right: 0rem;
 }
 
@@ -115,6 +114,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0.5em;
 }
 
 .esittely_teksti p{
@@ -177,6 +177,26 @@ input[type=submit]{
 
 input[type=submit]:hover {
   background-color: #f5c186;
+  color: #fff;
+}
+
+input[type=reset]{
+  background-color: #999;
+  color: #000;
+  padding: 0.23em;
+  border-radius: 0.25em;
+  border-color: #999;
+  width: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+  margin-left: 5.8rem; 
+}
+
+input[type=reset]:hover {
+  background-color: #c7c5c5;
   color: #fff;
 }
 
