--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,8 +16,7 @@ html {
 body {
   background-color: #efeded;
   min-height: 115vh;
-  min-width: 60vh;
-  max-width: max-content;
+  max-width: 60rem;
   margin: 1rem auto;
   box-shadow: 0px 0px 25px rgba(0,0,0,0.5);
   border-radius: 0.5em;
@@ -25,7 +24,7 @@ body {
 
 header {
   display: grid;
-  grid-template-columns: 6fr 1.45fr;
+  grid-template-columns: 8.5fr 1.45fr;
   justify-content: center;
   background-color: rgba(28,66,115,1);
   color: #fff;
@@ -39,7 +38,7 @@ header h1{
   font-weight: 700;
   font-size: 2.8rem;
   font-weight: normal;
-  margin: 0.2rem 0rem 0rem 12.5rem;
+  margin: 0.2rem 4rem 0rem 15.5rem;
 }
 
 header a {
@@ -62,10 +61,33 @@ h1 {
   font-size: 1.2em;
 }
 
+h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; 
+}
+
+h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 0rem;
+}
+
+h4 {
+  color:#f26d48;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 0rem;
+  margin-bottom: 1rem;
+}
+
 .kirjaudu {
   margin-top: 1rem;
-  margin-left: 1rem;
-  margin-right: 7.4rem;
+  margin-left: 2rem;
+  margin-right: 2.5rem;
+  padding-right: 2rem;
 }
 
 nav {
@@ -141,6 +163,13 @@ section {
   margin: -0.5em;
 }
 
+.yritykset {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 0rem;
+}
+
 form > div{
   display: flex;
   flex-direction: column;
@@ -200,6 +229,25 @@ input[type=reset]:hover {
   color: #fff;
 }
 
+.checkbox {
+  font-size: 1.1rem;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-right: 0rem;
+  margin-left: 6rem;
+  margin-bottom: -1.2rem;
+  margin-top: 1rem;
+}
+
+.vertaa {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 0rem;
+  margin-right: 6rem;
+}
+
 textarea {
   border: 1px solid #999;
   border-radius: 0.3rem;
@@ -211,17 +259,22 @@ textarea {
   align-items: center;
 }
 
+.otsake {
+  margin-left: 0.5rem;
+}
+
 table {
   border: 1px solid black;
   background-color: #d2d2d2;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  max-width: 60rem;
+  max-width: 58rem;
   margin: 1rem;
   margin-top: 0rem;
   margin-left: 0.4rem;
-  margin-right: 0.9rem;
+  margin-right: 0.4rem;
+  font-size: 0.98rem;
 }
 
 th {
